Add section about fixed gravity comp in OP

--- a/doc/report.tex
+++ b/doc/report.tex
@@ -652,6 +652,14 @@ In the desired configuration the joint 1 and partially joint 3 are responsible f
     \label{fig:without_gravity_op}
 \end{figure}
 
+\begin{figure}[H]
+    \begin{center}
+        \includegraphics[scale=0.3]{images/op_with_fixed.eps}
+    \end{center}
+    \caption{Operational Space PD control with fixed desired position for gravity compensation}
+    \label{fig:fixed_op}
+\end{figure}
+
 \newpage
 \subsection{Operational Space Inverse Dynamic PD control}
 
